--- a/styles/style.css
+++ b/styles/style.css
@@ -11,6 +11,422 @@
 */
 
 .page {
+  font-family: var(--font-main);
+  font-size: var(--main-size-text);
+  font-variation-settings: 'wght' 400;
   min-inline-size: 320px;
   min-block-size: 100dvb;
+  background-size: cover;
+  max-width: 100%;
+  background-repeat: no-repeat;
+  padding: 0 370px;
+}
+.header__background {
+  background-image: var(--main-background);
+  min-height: 100%;
+  width: 100%;
+  position: fixed;
+  background-repeat: no-repeat;
+  z-index: 0;
+  right: 0;
+}
+.header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+}
+.main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 50px;
+}
+.header__card {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+  margin-block: 100px;
+  padding-block: clamp(7.5rem, 7.323943661971831rem + 0.7511737089201878vw, 8rem);
+  min-inline-size: 699px;
+  border: 2px solid #000;
+  background-color: #fff;
+  z-index: 1;
+}
+.logo {
+  text-transform: uppercase;
+  font-size: clamp(3.0625rem, 2.710387323943662rem + 1.5023474178403755vw, 4.0625rem);
+}
+.header__title {
+  text-transform: uppercase;
+  font-size: clamp(0.875rem, 0.6769366197183099rem + 0.8450704225352111vw, 1.4375rem);
+}
+.card {
+  inline-size: 699px;
+  border: 2px solid #000;
+  z-index: 1;
+}
+.card__title {
+  font-family: var(--font-text);
+  padding: 4px 24px 7px 10px;
+  font-size: var(--main-size-text);
+  font-variation-settings: 'wght' 700;
+  color: var(--color-text);
+  background-color: var(--background-color-text);
+}
+.card__text_button-container {
+  display: grid;
+  grid-template-rows: 1fr min-content min-content;
+  grid-template-columns: 1fr min-content;
+  row-gap: 27px;
+  column-gap: 12px;
+  padding: 24px;
+  background-color: var(--background-color-text);
+}
+.card-text-decore {
+  font-family: var(--font-text);
+  color: var(--color-text);
+  font-size: var(--main-size-text);
+  line-height: var(--font-line-height);
+  font-variation-settings: 'wght' 400;
+  text-shadow: 1.5px 1.5px #000;
+}
+.card__text {
+  grid-column: 1 / 3;
+  grid-row: 1 / 2;
+}
+
+.card__subtext {
+  grid-column: 1 / 3;
+  grid-row: 2 / 3;
+}
+.image {
+  position: relative;
+  width: 100%;
+}
+.label-bigletters {
+  text-transform: uppercase;
+}
+.label_decore {
+  position: absolute;
+  margin-block-start: 25px;
+  margin-inline-end: 25px;
+  font-weight: 400;
+  font-size: 14px;
+  color: #000;
+  mix-blend-mode: hard-light;
+  -webkit-text-stroke: 1px #fff;
+  z-index: 2;
+}
+@supports (text-stroke: 1px #fff) {
+  span {
+    text-stroke: 1px #fff;
+  }
+}
+.contrast-image {
+  filter: contrast(20%);
+}
+.blur-image {
+  filter: blur(0.5rem);
+}
+.grayscale__blur-image {
+  filter: blur(5px) grayscale(1);
+}
+.saturate-image {
+  filter: saturate(158%);
+}
+.hue-rotate-image {
+  filter: hue-rotate(-90deg);
+}
+.sepia-image {
+  filter: sepia(80%);
+}
+.invert-image {
+  filter: invert(0.7);
+}
+.label__image-container {
+  display: grid;
+  justify-items: end;
+  border-top: 2px solid #000;
+  border-bottom: 2px solid #000;
+}
+.button {
+  border: 2px solid #000;
+  align-self: end;
+  font-size: 14px;
+  font-weight: 400;
+  color: var(--color-text);
+  background-color: #fff;
+  cursor: pointer;
+}
+.card__like-button {
+  position: relative;
+  grid-column: 2 / 3;
+  grid-row: 3 / 4;
+  justify-self: end;
+  width: 130px;
+  height: 38px;
+  color: #fff;
+  background-color: #fff;
+  
+}
+.card__like-button:focus {
+  outline: none;
+}
+.card__like-button:focus-visible {
+  box-shadow: 2px 2px 0 0 #000;
+  transition: box-shadow 0.5s;
+}
+.card__like-button::after {
+  content: '';
+  position: absolute;
+  inset: 0;
+  display: block;
+  height: 37px;
+  width: 129px;
+  background-color: #000;
+  transform-origin: left;
+  transform: scaleX(0);
+  transition: transform 0.5s ease-in-out;
+  z-index: 1;
+}
+
+.card__like-button:hover::after {
+  transform: scaleX(1);
+}
+.button__text {
+  position: relative;
+  text-align: center;
+  z-index: 10;
+  mix-blend-mode: difference;
+}
+.card__icon-button {
+  grid-column: 1 / 2;
+  grid-row: 3 / 4;
+  justify-self: end;
+  background-color: transparent;
+  border: none;
+  inline-size: 39px;
+  block-size: 36px;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.button__save {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  isolation: isolate;
+  background-color: #fff;
+  overflow: hidden;
+  gap: 8px;
+  margin-block-start: 47px;
+  position: relative;
+  color: #fff;
+  padding: 15px 19px;
+  min-inline-size: 339px;
+  margin-block-end: 105px;
+  z-index: 1;
+}
+.button__save::after {
+  content: '';
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  display: block;
+  height: 51px;
+  width: 337px;
+  background-color: #000;
+  transform-origin: left;
+  transform: scaleX(0);
+  transition: transform 0.5s ease-in-out;
+  z-index: 0;
+}
+.button__save:hover::after {
+  transform: scaleX(1);
+}
+
+.button__save svg {
+  position: relative;
+  block-size: 1.5em;
+  mix-blend-mode: difference;
+  z-index: 1;
+}
+.like-icon {
+  transform-origin: center;
+}
+.like-icon .core {
+  fill: transparent;
+  transition: fill 0.2s linear;
+}
+.like-icon:hover .core {
+  fill: black; 
+  opacity: 1;
+  transition: fill 0.3s 0.05s linear;
+}
+.like-icon .main-body {
+  fill: transparent;
+  transition: fill 0.3s linear;
+}
+.like-icon:hover .main-body {
+  fill: black; 
+  opacity: 1;
+  transition: fill 0.3s 0.05s linear;
+}
+
+.like-icon .core {
+  fill: transparent;
+  transition: fill 0.2s linear;
+}
+.like-icon:active .core {
+  fill: #FF0000; 
+  opacity: 1;
+  transition: fill 0.3s 0.05s linear;
+}
+.like-icon .main-body {
+  fill: transparent;
+  transition: fill 0.3s linear;
+}
+.like-icon:active .main-body {
+  fill: #FF0000; 
+  opacity: 1;
+  transition: fill 0.3s 0.05s linear;
+}
+
+.like-icon.is-liked .core {
+  fill: #FF0000;
+  transition: fill 0.3s linear;
+}
+.like-icon.is-liked .main-body {
+  fill: #FF0000;
+  transition: fill 0.3s linear;
+}
+.like-icon.is-liked .contour {
+  fill: #FF0000;
+  transition: fill 0.3s 0.06s linear;
+}
+.like-icon.is-liked .sparks {
+  fill: #FF0000;
+  transition: fill 0.3s 0.3s ease-in;
+}
+.like-icon.is-liked .sparks {
+  fill: none;
+  transition: fill 0.3s 0.3s ease-in;
+}
+.popover {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 2px solid #000;
+  padding: 30px;
+  inset: 0;
+  
+  justify-self: center;
+  inline-size: 353px;
+ 
+  background-color: var(--background-color-text);
+  z-index: 2;
+}
+.popover::backdrop {
+  background-color: rgba(0, 0, 0, 0.6);
+}
+.floppy-popover {
+  width: 85px;
+}
+.text-popover-cont {
+  display: flex;
+  gap: 20px;
+}
+.button-popover {
+  padding: 12.5px 132.5px;
+  text-transform: uppercase;
+  margin-block-start: 30px;
+}
+.text-popover {
+  font-size: calc(var(--main-size-text) - 4px);
+  text-transform: uppercase;
+  line-height: 150%;
+}
+.popover:not(:popover-open) {
+  display: none;
+}
+
+@keyframes heart-animation {
+  from {
+    scale: 1;
+  }
+  to {
+    scale: 1.25;
+  }
+}
+
+@keyframes spark-burst {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+.card__icon-button:has(.is-liked) .sparks {
+  fill: #FF0000;
+  animation: spark-burst 0.3s 0.3s ease-in forwards;
+}
+
+
+.card__icon-button:has(.is-liked) .heart {
+  animation: heart-animation 0.3s ease-in;
+  transform-origin: center;
+}
+
+@media (width <= 375px) {
+  .page {
+    padding: 0 186px;
+  }
+  .header__card {
+    min-inline-size: 375px;
+    inline-size: 375px;
+    
+  }
+  .card {
+    max-inline-size: 375px;
+  }
+  .card__subtext {
+    grid-column: 1 / 3;
+  }
+  .card__text_button-container {
+    row-gap: 25px;
+  }
+  .label_decore {
+    margin-block-start: 21px;
+    margin-inline-end: 10px;
+  }
+  .button__save {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 8px;
+    margin-block-start: 52px;
+    padding: 16px 11px;
+    min-inline-size: 313px
+  }
+  .floppy {
+    width: 28px;
+    height: 28px;
+  }
+  .button__save::after {
+   
+    height: 140px;
+    
+  }
 }
