--- a/styles/style.css
+++ b/styles/style.css
@@ -9,8 +9,12 @@
 ✦ button__text — для обозначения текстового элемента внутри кнопки
 
 */
+
 .page {
-  font-family: var(--font-main);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  font-family: var(--font-main), fantasy;
   font-size: var(--main-size-text);
   font-variation-settings: 'wght' 400;
   min-inline-size: 320px;
@@ -19,16 +23,12 @@
   max-width: 100%;
   background-repeat: no-repeat;
   padding: 0 370px;
-}
-.header__background {
   background-image: var(--main-background);
-  min-height: 100%;
-  width: 100%;
-  position: fixed;
+  background-attachment: fixed;
+  background-size: cover;
   background-repeat: no-repeat;
-  z-index: 0;
-  right: 0;
 }
+
 .header {
   display: flex;
   justify-content: center;
@@ -49,21 +49,25 @@
   gap: 20px;
   margin-block: 100px;
   padding-block: clamp(7.5rem, 7.323943661971831rem + 0.7511737089201878vw, 8rem);
-  min-inline-size: 699px;
+  padding-inline: clamp(0.875rem, -6.8055rem + 32.769999999999996vw, 7.53125rem);
+  min-inline-size: 375px;
   border: 2px solid #000;
   background-color: #fff;
   z-index: 1;
 }
 .logo {
   text-transform: uppercase;
-  font-size: clamp(3.0625rem, 2.710387323943662rem + 1.5023474178403755vw, 4.0625rem);
+  font-size: clamp(3.0625rem, -1.157rem + 5.800000000000001vw, 4.0625rem);
 }
 .header__title {
+  text-align: center;
   text-transform: uppercase;
   font-size: clamp(0.875rem, 0.6769366197183099rem + 0.8450704225352111vw, 1.4375rem);
 }
 .card {
-  inline-size: 699px;
+  inline-size: 100%;
+  min-inline-size: 375px;
+  max-inline-size: 696px;
   border: 2px solid #000;
   z-index: 1;
 }
@@ -90,7 +94,6 @@
   font-size: var(--main-size-text);
   line-height: var(--font-line-height);
   font-variation-settings: 'wght' 400;
-  text-shadow: 1.5px 1.5px #000;
 }
 .card__text {
   grid-column: 1 / 3;
@@ -104,6 +107,8 @@
 .image {
   position: relative;
   width: 100%;
+  object-position: center;
+  object-fit: contain;
 }
 .label-bigletters {
   text-transform: uppercase;
@@ -116,12 +121,12 @@
   font-size: 14px;
   color: #000;
   mix-blend-mode: hard-light;
-  -webkit-text-stroke: 1px #fff;
+  text-shadow: 1px #fff;
   z-index: 2;
 }
-@supports (text-stroke: 1px #fff) {
-  span {
-    text-stroke: 1px #fff;
+@supports (-webkit-text-stroke: 1px #fff) {
+  .label_decore {
+    -webkit-text-stroke: 1px #fff;
   }
 }
 .contrast-image {
@@ -159,6 +164,7 @@
   color: var(--color-text);
   background-color: #fff;
   cursor: pointer;
+  transition: box-shadow 0.5s;
 }
 .card__like-button {
   position: relative;
@@ -171,10 +177,13 @@
   background-color: #fff;
   
 }
-.card__like-button:focus {
+.button:focus {
   outline: none;
 }
-.card__like-button:focus-visible {
+.card__icon-button:focus {
+  outline: none;
+}
+.button:focus-visible {
   box-shadow: 2px 2px 0 0 #000;
   transition: box-shadow 0.5s;
 }
@@ -221,10 +230,10 @@
   flex-direction: row;
   align-items: center;
   isolation: isolate;
+  align-self: center;
   background-color: #fff;
   overflow: hidden;
   gap: 8px;
-  margin-block-start: 47px;
   position: relative;
   color: #fff;
   padding: 15px 19px;
@@ -259,16 +268,19 @@
   z-index: 1;
 }
 .like-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   transform-origin: center;
 }
 .like-icon .core {
   fill: transparent;
-  transition: fill 0.2s linear;
+  transition: fill 0.3s 0.03s linear;
 }
 .like-icon:hover .core {
   fill: black;
   opacity: 1;
-  transition: fill 0.3s 0.05s linear;
+  transition: fill 0.3s linear;
 }
 
 .like-icon:hover .main-body {
@@ -280,7 +292,7 @@
 .like-icon:active .core {
   fill: #FF0000;
   opacity: 1;
-  transition: fill 0.3s 0.05s linear;
+  transition: fill 0.3s linear;
 }
 .like-icon .main-body {
   fill: transparent;
@@ -298,7 +310,7 @@
 }
 .like-icon.is-liked .main-body {
   fill: #FF0000;
-  transition: fill 0.3s linear;
+  transition: fill 0.3s 0.05s linear;
 }
 .like-icon.is-liked .contour {
   fill: #FF0000;
@@ -328,7 +340,7 @@ body:has(.dialog[open]) {
   overflow: hidden;
 } 
 .dialog[open]::backdrop {
-  background-color: rgba(0, 0, 0, 0.6);
+  background-color: rgba(0, 0, 0, 0.75);
 }
 
 .floppy-dialog {
@@ -349,26 +361,6 @@ body:has(.dialog[open]) {
   line-height: 150%;
 }
 
-@keyframes heart-animation {
-  from {
-    scale: 1;
-  }
-  to {
-    scale: 1.25;
-  }
-}
-
-@keyframes spark-burst {
-  0% {
-    opacity: 0;
-  }
-  50% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0;
-  }
-}
 .card__icon-button:has(.is-liked) .sparks {
   fill: #FF0000;
   animation: spark-burst 0.3s 0.3s ease-in forwards;
@@ -383,11 +375,6 @@ body:has(.dialog[open]) {
 @media (width <= 375px) {
   .page {
     padding: 0 186px;
-  }
-  .header__card {
-    min-inline-size: 375px;
-    inline-size: 375px;
-    
   }
   .card {
     max-inline-size: 375px;
