--- a/styles/style.css
+++ b/styles/style.css
@@ -114,17 +114,19 @@
 }
 .label_decore {
   position: absolute;
-  margin-block-start: 25px;
-  margin-inline-end: 25px;
+  top: 25px;
+  right: 25px;
   font-weight: 400;
   font-size: 14px;
   color: #000;
   mix-blend-mode: hard-light;
   opacity: 0.5;
+  text-shadow: 1px #fff;
   z-index: 2;
 }
 @supports (-webkit-text-stroke: 1px #fff) {
   .label_decore {
+    text-shadow: none;
     -webkit-text-stroke: 1px #fff;
   }
 }
@@ -150,6 +152,7 @@
   filter: invert(0.7);
 }
 .label__image-container {
+  position: relative;
   display: grid;
   justify-items: end;
   border-top: 2px solid #000;
@@ -379,6 +382,9 @@ body:has(.dialog[open]) {
   animation: heart-animation 0.3s ease-in;
   transform-origin: center;
 }
+.floppy-dialog {
+  width: 85px;
+}
 @media (width <= 375px) {
   .page {
     padding: 0 186px;
@@ -393,10 +399,6 @@ body:has(.dialog[open]) {
     row-gap: 26px;
     column-gap: 6px;
     padding: 24px;
-  }
-  .label_decore {
-    margin-block-start: 21px;
-    margin-inline-end: 10px;
   }
   .button__save {
     display: flex;
