--- a/styles/variables.css
+++ b/styles/variables.css
@@ -8,7 +8,7 @@
   --main-size-text: 18px;
   --color-text: #000;
   --font-line-height: 117%;
-  --main-background: repeating-linear-gradient(to right, #d3d3d3 0 2px, transparent 2px 4px), repeating-linear-gradient(to top, #d3d3d3 0 2px, transparent 2px 4p), linear-gradient(180deg, #e7e7e7 0.01%, #1a1a1a 100%);
+  --main-background: repeating-linear-gradient(to right, #d3d3d3 0 2px, transparent 2px 4px), repeating-linear-gradient(to top, #d3d3d3 0 2px, transparent 2px 4px), linear-gradient(180deg, #e7e7e7 0.01%, #1a1a1a 100%);
 
   --background-color-text: #fff;
   --contour-color: black;
